[gd_scene load_steps=2 format=3 uid="uid://bln0sjssdaxub"]

[ext_resource type="Script" path="res://gui/options_menu.gd" id="1_obqrd"]

[node name="Options_Menu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_obqrd")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/NinePatchRect/HBoxContainer"]
layout_mode = 2

[node name="Resolution" type="Label" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Resolution"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Window Mode" type="Label" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Window Mode"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2

[node name="Master Volume" type="Label" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="Music Volume" type="Label" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="SFX Volume" type="Label" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/NinePatchRect/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/NinePatchRect/HBoxContainer"]
layout_mode = 2

[node name="Resolution_Menu" type="OptionButton" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer2"]
layout_mode = 2
item_count = 1
popup/item_0/text = "1080 x 720"

[node name="Window_Menu" type="OptionButton" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer2"]
layout_mode = 2
item_count = 1
popup/item_0/text = "Windowed"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Master_Volume_Slider" type="HSlider" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
value = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2

[node name="Music_Volume_Slider" type="HSlider" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer2"]
layout_mode = 2
value = 100.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2

[node name="SFX_Volume_Slider" type="HSlider" parent="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer2"]
layout_mode = 2
value = 100.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Save_Button" type="Button" parent="MarginContainer/NinePatchRect/HBoxContainer2"]
layout_mode = 2
text = "Save
"

[node name="Default_Button" type="Button" parent="MarginContainer/NinePatchRect/HBoxContainer2"]
layout_mode = 2
text = "Default
"

[node name="Close_Button" type="Button" parent="MarginContainer/NinePatchRect/HBoxContainer2"]
layout_mode = 2
text = "Close
"

[connection signal="item_selected" from="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer2/Resolution_Menu" to="." method="_on_resolution_menu_item_selected"]
[connection signal="item_selected" from="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer2/Window_Menu" to="." method="_on_window_menu_item_selected"]
[connection signal="value_changed" from="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer2/Master_Volume_Slider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer2/Music_Volume_Slider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/NinePatchRect/HBoxContainer/VBoxContainer2/SFX_Volume_Slider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/NinePatchRect/HBoxContainer2/Save_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/NinePatchRect/HBoxContainer2/Default_Button" to="." method="_on_default_button_pressed"]
[connection signal="pressed" from="MarginContainer/NinePatchRect/HBoxContainer2/Close_Button" to="." method="_on_close_button_pressed"]
